src/objects/JunctionBasket__c.object
<CustomObject>
    <fields>
        <fullName>BasketReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BasketReference</label>
        <referenceTo>Basket__c</referenceTo>
        <relationshipLabel>JunctionBaskets</relationshipLabel>
        <relationshipName>JunctionBaskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ItemCount__c</fullName>
        <label>ItemCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemReference__c</fullName>
        <label>ItemReference</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>JunctionBaskets</relationshipLabel>
        <relationshipName>JunctionBaskets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>JunctionBasket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>JunctionBasket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JunctionBaskets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>